--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body{
     font-size: 40px;
     margin-bottom: 20px;
     font-family: Roboto, sans-serif;
-    color: white;
+    color: 	#FFD700;
+    height: 17%;
     text-align: right;
 }
 
@@ -42,8 +43,15 @@ button{
     padding: 20px;
     font-size: 20px;
     font-family: Roboto, sans-serif;
+    background-color:#616161 ;
+    border: none;
+    border-radius: 5px;
 }
 
-.equals{
+button:hover{
+    background-color: #3b3b3b;
+}
+
+.equalsKey{
     grid-column: 3/5;
 }
